# cpp-stratego-smells-like-team-spirit

./: .gitignore
stratego/: CMakeLists.txt  main.cpp
stratego/cards/: CardBomb.hpp  CardCaptain.hpp  CardColonel.hpp  CardFlag.hpp  CardGeneral.hpp  CardLieutentant.hpp  CardMajor.hpp  CardMarshall.hpp  CardMiner.hpp  CardSargeant.hpp  CardScout.hpp  CardSpy.hpp
stratego/enums/: CardType.h  ClickedArea.h  Color.h  Direction.h  FlipAnimState.h  GameState.h  UIElement.h
stratego/include/: Assets.cpp  Assets.h  Button.h  Card.h  Card.hpp  Coordinate.h  Display.h  Field.h  Game.h  GameState.h  InputParser.h  ProcessedEvent.hpp
stratego/src/: Assets.cpp  Button.cpp  Card.cpp  CardType.cpp  Coordinate.cpp  Display.cpp  Field.cpp  Game.cpp  GameState.cpp  InputParser.cpp
